--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
   line-height: 1.8;
   background-color: var(--water);
   color: var(--blue);
+  -webkit-text-size-adjust: 100%;
 }
 
 .container_all {
@@ -107,6 +108,7 @@ img {
   width: 150px;
   padding: 10px;
   font-size: 1.5rem;
+  letter-spacing: 0.1rem;
   margin-top: 20px;
   text-align: center;
 }
@@ -239,7 +241,7 @@ facebook
 }
 
 .article {
-  width: 48%;
+  width: 90%;
 }
 
 .article_img,
@@ -423,7 +425,7 @@ online shop
   }
 
   .article {
-    width: 32%;
+    width: 92%;
   }
 
   .yui_sano_photo_area {
