--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ img {
 
 .l-vertical-right {
   writing-mode: vertical-rl;
+  -ms-writing-mode:tb-rl;
   position: absolute;
   right: -40px;
   top: 100px;
@@ -92,6 +93,7 @@ img {
 
 .l-vertical-left {
   writing-mode: vertical-rl;
+  -ms-writing-mode:tb-rl;
   position: absolute;
   top: 100px;
   left: calc(8% - 25px);
@@ -220,6 +222,7 @@ img {
 
 .slides_sp img {
   object-fit: cover;
+  font-family: 'object-fit: cover;'; /*IE対策*/
 }
 
 .sub_visual {
@@ -251,6 +254,7 @@ facebook
 
 .article_img img {
   object-fit: cover;
+  font-family: 'object-fit: cover;'; /*IE対策*/
 }
 
 .article_textarea {
@@ -341,6 +345,7 @@ products
 .product_image img {
   height: 180px;
   object-fit: cover;
+  font-family: 'object-fit: cover;'; /*IE対策*/
 }
 
 /*--------
@@ -422,6 +427,7 @@ online shop
 
   .slides_pc img {
     object-fit: cover;
+    font-family: 'object-fit: cover;'; /*IE対策*/
   }
 
   .article {
@@ -530,10 +536,12 @@ online shop
   .yui_sano .image {
     width: 40%;
     object-fit: cover;
+    font-family: 'object-fit: cover;'; /*IE対策*/
   }
 
   .yui_sano .image img {
     object-fit: cover;
+    font-family: 'object-fit: cover;'; /*IE対策*/
     height: 100%;
   }
 
